--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Host Scanner by Madison Technologies</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/style.css" />
@@ -35,8 +36,8 @@
             <h2 class="madi-headline">Host Scanner</h2>
           </div>
         </div>
-        <div class="row justify-content-md-center">
-          <div class="col-10 fs-5">
+        <div class="row justify-content-center">
+          <div class="col-10 col-md-10 fs-5">
             <p>
               Request a port scan on your domain that will be delivered to your
               inbox upon completion. To scan your domain, enter your email
@@ -48,12 +49,12 @@
         </div>
       </div>
     </div>
-    <div class="container" id="other">
-      <div class="row justify-content-md-center">
-        <div class="col-4 fs-6">
+    <div class="container container-sm" id="other">
+      <div class="row justify-content-center mb-3 align-items-center">
+        <div class="col-10 col-lg-4 fs-6">
           <div>
             <!--            <h4 class="title" style="margin: 35px 0 25px 0 ;">Why Scan Your Host?</h4>-->
-            <div class="row" style="margin: 45px 0 0 0">
+            <div class="row">
               <div class="col">
                 <img src="/img/scan.svg" alt="IT Security" />
                 <p class="topic">Identify Open Ports</p>
@@ -65,7 +66,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 fs-6 tab-content-item">
+        <div class="col-10 col-lg-6 fs-6 tab-content-item">
           <h4 class="title">How Do I Interpret The Results?</h4>
           <p>
             Your emailed report will contain a grade and a list of open TCP
@@ -73,18 +74,20 @@
             unexpected open ports. Your grade tells you at a glance how your
             open ports affect your security risk.
           </p>
-          <table class="grade-table">
-            <tbody>
-              <tr>
-                <td class="grade green">A</td>
-                <td class="grade green">B</td>
-                <td class="grade orange">C</td>
-                <td class="grade orange">D</td>
-                <td class="grade red">E</td>
-                <td class="grade red">F</td>
-              </tr>
-            </tbody>
-          </table>
+          <div class="table-container">
+            <table class="grade-table">
+              <tbody>
+                <tr>
+                  <td class="grade green">A</td>
+                  <td class="grade green">B</td>
+                  <td class="grade orange">C</td>
+                  <td class="grade orange">D</td>
+                  <td class="grade red">E</td>
+                  <td class="grade red">F</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
           <p style="margin-top: 1rem">
             For example, having ports 3306 (MySQL) or 1433 (MSSQL) open to the
             public Internet can be a security risk and will give you a lower
@@ -95,8 +98,8 @@
     </div>
 
     <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col-10">
+      <div class="row justify-content-center">
+        <div class="col-10 col-md-10">
           <h4 class="title">Get Started</h4>
           <p>
             Enter your email address below and we will scan the Top 100 TCP
@@ -121,31 +124,32 @@
                 placeholder="user@example.com"
               />
             </div>
-            <input
-              class="css-checkbox"
-              type="checkbox"
-              id="terms"
-              value="1"
-              checked="checked"
-              aria-invalid="false"
-            />
-            <label for="terms">
-              <span
-                >I am authorized and have permission to scan the domain name
-                that is part of my email address. I agree to receive
-                communications in line with Madison Technologies’
-                <a href="#">Privacy Policy</a>. I can unsubscribe at any
-                time.</span
-              >
-            </label>
-
+            <div class="checkbox-container">
+              <input
+                class="css-checkbox"
+                type="checkbox"
+                id="terms"
+                value="1"
+                checked="checked"
+                aria-invalid="false"
+              />
+              <label for="terms">
+                <span
+                  >I am authorized and have permission to scan the domain name
+                  that is part of my email address. I agree to receive
+                  communications in line with Madison Technologies’
+                  <a href="#">Privacy Policy</a>. I can unsubscribe at any
+                  time.</span
+                >
+              </label>
+            </div>
             <div></div>
 
             <div class="row">
-              <div class="col-3 my-auto">
+              <div class="col-10 col-md-3 btn-container">
                 <button type="submit" id="submit" class="btn">VERIFY</button>
               </div>
-              <div class="col-7 col-md-8 my-auto">
+              <div class="col-10 col-md-7 my-auto mx-auto">
                 <p id="response"></p>
               </div>
             </div>
@@ -157,7 +161,7 @@
       <div class="footer-content center-relative">
         <div class="container">
           <div class="row">
-            <div class="col-6 col-sm-6 col-md-4 text-left">
+            <div class="col-10 col-sm-6 col-md-4 text-left">
               © Madison Technologies 2023
             </div>
           </div>
